--- a/src/main/res/layout/widget_layout.xml
+++ b/src/main/res/layout/widget_layout.xml
@@ -7,13 +7,14 @@
         android:clickable="true"
         android:background="@drawable/background">
 
-    <Button
+    <ImageButton
             android:id="@+id/on"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:src="@drawable/off"/>
 
     <LinearLayout
             android:layout_width="fill_parent"
